# rsbamtk

./: .gitignore  Cargo.toml  README.md
.github/workflows/: CI.yml
src/: atac_shift_bam.rs  lib.rs  main.rs  split_sample_and_spikein.rs  subtract_regions.rs
