[package]
name = "rsbamtk"
version = "0.1.0"
edition = "2021"

[dependencies]
rust-htslib = { version = "*"}
bio = "*"
tempdir = "0.3.7"
clap = {version = "4.0.23", features = ["derive",]}
anyhow = "1.0"
log = "*"
rust-lapper = "1.1.0"
crossbeam = "*"
bstr = "1.4.0"
itertools = "*"
noodles = {version = '0.77.0', features = ['bam', 'bgzf', 'cram', 'sam', 'bed', 'core']}
ahash = "0.8.11"
colog = "1.3.0"
tempfile = "3.10.1"
serde = { version = "1.0", features = ["derive"] }
indicatif = {version = "*", features = ["rayon"]}
